internal/testdata/node/autogen-templates/ingress-6/node.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/service-id: service-id
    fastly.amazee.io/watch: "true"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: main
    lagoon.sh/version: v2.7.x
    monitor.stakater.com/enabled: "false"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag "noindex, nofollow";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: node
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: autogenerated-ingress
    lagoon.sh/autogenerated: "true"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: node
    lagoon.sh/service-type: node
    lagoon.sh/template: autogenerated-ingress-0.1.0
    route.lagoon.sh/source: autogenerated
  name: node
spec:
  rules:
  - host: node-example-project-main.example.com
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - node-example-project-main.example.com
    secretName: node-tls
status:
  loadBalancer: {}
